<resources>
    <string name="app_name">Unsplash03</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="collection_title">Collection title</string>
    <string name="select_cover_collection">Select cover collection ...</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="fill_all_require">Please fill all require field !</string>
    <string name="msg_delete">Are you sure want to delete ?</string>
    <string name="update">Update</string>
    <string name="download">Download</string>
    <string name="msg_empty_collections">You should add favorite collection first !</string>
    <string name="photo_add">Photo added !</string>
</resources>
